// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PipelineEditor component includes required error message for falsy pipeline id 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Create Pipeline"
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={
      Array [
        "Pipeline ID is required",
        "Pipeline ID must begin with a letter or underscore and contain only letters, underscores, dashes, and numbers",
      ]
    }
    isInvalid={true}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline ID"
          id="xpack.logstash.pipelineEditor.pipelineIdFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputId"
        fullWidth={true}
        isInvalid={true}
        name="pipelineId"
        onBlur={[Function]}
        onChange={[Function]}
        value=""
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={true}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;

exports[`PipelineEditor component invalidates form for invalid pipeline id input 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-$invalid-pipeline-name"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Create Pipeline"
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={
      Array [
        "Pipeline ID must begin with a letter or underscore and contain only letters, underscores, dashes, and numbers",
      ]
    }
    isInvalid={true}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline ID"
          id="xpack.logstash.pipelineEditor.pipelineIdFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputId"
        fullWidth={true}
        isInvalid={true}
        name="pipelineId"
        onBlur={[Function]}
        onChange={[Function]}
        value="$invalid-pipeline-name"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={true}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;

exports[`PipelineEditor component invalidates form for pipeline id with spaces 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-pipeline id with spaces"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Create Pipeline"
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={
      Array [
        "Pipeline ID must begin with a letter or underscore and contain only letters, underscores, dashes, and numbers",
      ]
    }
    isInvalid={true}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline ID"
          id="xpack.logstash.pipelineEditor.pipelineIdFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputId"
        fullWidth={true}
        isInvalid={true}
        name="pipelineId"
        onBlur={[Function]}
        onChange={[Function]}
        value="pipeline id with spaces"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={true}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;

exports[`PipelineEditor component matches snapshot for clone pipeline 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-pipelineId"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Clone Pipeline \\"pipelineToClone\\""
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={Array []}
    isInvalid={false}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={false}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonEmpty
        color="danger"
        data-test-subj="btnDeletePipeline"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Delete pipeline"
          id="xpack.logstash.pipelineEditor.deletePipelineButtonLabel"
        />
      </EuiButtonEmpty>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;

exports[`PipelineEditor component matches snapshot for create pipeline 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-pipelineId"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Create Pipeline"
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={Array []}
    isInvalid={false}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline ID"
          id="xpack.logstash.pipelineEditor.pipelineIdFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputId"
        fullWidth={true}
        isInvalid={false}
        name="pipelineId"
        onBlur={[Function]}
        onChange={[Function]}
        value="pipelineId"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={false}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;

exports[`PipelineEditor component matches snapshot for edit pipeline 1`] = `
<EuiPageSection
  data-test-subj="pipelineEdit pipelineEdit-pipelineId"
  restrictWidth={true}
  style={
    Object {
      "width": "100%",
    }
  }
>
  <EuiPageHeader
    bottomBorder={true}
    pageTitle="Edit Pipeline \\"pipelineId\\""
  />
  <EuiSpacer
    size="l"
  />
  <EuiForm
    error={Array []}
    isInvalid={false}
  >
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Description"
          id="xpack.logstash.pipelineEditor.descriptionFormRowLabel"
        />
      }
      labelType="label"
    >
      <EuiFieldText
        data-test-subj="inputDescription"
        fullWidth={true}
        name="pipelineDescription"
        onChange={[Function]}
        value="pipeline description"
      />
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      fullWidth={true}
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <Memo(MemoizedFormattedMessage)
          defaultMessage="Pipeline"
          id="xpack.logstash.pipelineEditor.pipelineFormRowLabel"
        />
      }
      labelType="label"
    >
      <div
        data-test-subj="pipelineField"
      >
        <CodeEditor
          aria-label="Pipeline editor"
          height={500}
          languageId="text"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "lineNumbers": "on",
              "tabSize": 2,
            }
          }
          value="input { stdin { } } filter { } output { stdout { } }"
        />
      </div>
    </EuiFormRow>
    <EuiFormRow
      describedByIds={Array []}
      display="row"
      hasChildLabel={true}
      hasEmptyLabelSpace={false}
      label={
        <FormLabelWithIconTip
          formRowLabelText="Pipeline workers"
          formRowTooltipText="The number of workers that will, in parallel, execute the filter and output stages of the pipeline. If you find that events are backing up, or that the CPU is not saturated, consider increasing this number to better utilize machine processing power.

Default value: Number of the host’s CPU cores"
        />
      }
      labelType="label"
    >
      <EuiFieldNumber
        data-test-subj="inputWorkers"
        onChange={[Function]}
        value={1}
      />
    </EuiFormRow>
    <EuiSpacer />
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Pipeline batch size"
        formRowTooltipText="The maximum number of events an individual worker thread will collect from inputs before attempting to execute its filters and outputs. Larger batch sizes are generally more efficient, but come at the cost of increased memory overhead. You may have to increase the JVM heap size by setting the LS_HEAP_SIZE variable to effectively use the option.

Default value: 125"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchSize"
          onChange={[Function]}
          value={256}
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Pipeline batch delay"
        formRowTooltipText="When creating pipeline event batches, how long in milliseconds to wait for each event before dispatching an undersized batch to pipeline workers.

Default value: 50ms"
      >
        <EuiFieldNumber
          data-test-subj="inputBatchDelay"
          onChange={[Function]}
          value={10}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
    <EuiFlexGroup>
      <FlexItemSetting
        formRowLabelText="Queue type"
        formRowTooltipText="The internal queuing model to use for event buffering. Specify memory for in-memory based queuing, or persisted for disk-based ACKed queueing

Default value: memory"
      >
        <EuiSelect
          data-test-subj="selectQueueType"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueType-memory",
                "text": "memory",
                "value": "memory",
              },
              Object {
                "data-test-subj": "selectQueueType-persisted",
                "text": "persisted",
                "value": "persisted",
              },
            ]
          }
          value="MB"
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue max bytes"
        formRowTooltipText="The total capacity of the queue in number of bytes. Make sure the capacity of your disk drive is greater than the value you specify here.

Default value: 1024mb (1g)"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueMaxBytesNumber"
          onChange={[Function]}
        />
      </FlexItemSetting>
      <FlexItemSetting>
        <EuiSelect
          data-test-subj="selectQueueMaxBytesUnits"
          onChange={[Function]}
          options={
            Array [
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-b",
                "text": "bytes",
                "value": "b",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-kb",
                "text": "kilobytes",
                "value": "kb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-mb",
                "text": "megabytes",
                "value": "mb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-gb",
                "text": "gigabytes",
                "value": "gb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-tb",
                "text": "terabytes",
                "value": "tb",
              },
              Object {
                "data-test-subj": "selectQueueMaxBytesUnits-pb",
                "text": "petabytes",
                "value": "pb",
              },
            ]
          }
        />
      </FlexItemSetting>
      <FlexItemSetting
        formRowLabelText="Queue checkpoint writes"
        formRowTooltipText="The maximum number of written events before forcing a checkpoint when persistent queues are enabled. Specify 0 to set this value to unlimited.

Default value: 1024"
      >
        <EuiFieldNumber
          data-test-subj="inputQueueCheckpointWrites"
          onChange={[Function]}
          value={100}
        />
      </FlexItemSetting>
    </EuiFlexGroup>
  </EuiForm>
  <EuiSpacer
    size="l"
  />
  <EuiFlexGroup
    justifyContent="flexStart"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnSavePipeline"
        fill={true}
        isDisabled={false}
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Create and deploy"
          id="xpack.logstash.pipelineEditor.createAndDeployButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="btnCancel"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Cancel"
          id="xpack.logstash.pipelineEditor.cancelButtonLabel"
        />
      </EuiButton>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButtonEmpty
        color="danger"
        data-test-subj="btnDeletePipeline"
        onClick={[Function]}
      >
        <MemoizedFormattedMessage
          defaultMessage="Delete pipeline"
          id="xpack.logstash.pipelineEditor.deletePipelineButtonLabel"
        />
      </EuiButtonEmpty>
    </EuiFlexItem>
  </EuiFlexGroup>
</EuiPageSection>
`;
